--- a/src/apps/Android/app/src/main/res/values/strings.xml
+++ b/src/apps/Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">libreevent entry control</string>
+    <string name="log_out">Log out</string>
 </resources>
